# facial-rec-app

./: .gitignore  Final Project - Classification.ipynb  Final Project - Neural Network.ipynb  Final Project - Visualization.ipynb  README.md  pyproject.toml
